--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,25 @@
              <version>1.8.8-R0.1-SNAPSHOT</version>
              <scope>provided</scope>
       </dependency>
+            <dependency>
+        <groupId>com.squareup.dagger</groupId>
+        <artifactId>dagger</artifactId>
+        <version>1.2.4</version>
+        <scope>compile</scope>
+      </dependency>
+      <dependency>
+        <groupId>com.squareup.dagger</groupId>
+        <artifactId>dagger-compiler</artifactId>
+        <version>1.2.4</version>
+        <optional>true</optional>
+        <scope>provided</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.projectlombok</groupId>
+        <artifactId>lombok</artifactId>
+        <version>1.16.8</version>
+        <scope>provided</scope>
+      </dependency>
   </dependencies>
   <build>
     <sourceDirectory>src</sourceDirectory>
@@ -27,6 +46,23 @@
           <source>1.8</source>
           <target>1.8</target>
         </configuration>
+      </plugin>
+       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-shade-plugin</artifactId>
+        <version>2.4.3</version>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>shade</goal>
+            </goals>
+            <configuration>
+              <artifactSet>
+              </artifactSet>
+            </configuration>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
     <resources>
